[package]
name = "gauge"
version = "0.3.3"
description = "Allows Tribeca Voting Escrows to vote on token allocations between different Quarries."
edition = "2021"
homepage = "https://quarry.so"
repository = "https://github.com/QuarryProtocol/gauge"
authors = ["Quarry Team <team@quarry.so>"]
license = "AGPL-3.0"
keywords = ["solana", "anchor", "governance", "tribeca", "quarry"]

[lib]
crate-type = ["cdylib", "lib"]
name = "gauge"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.22"
anchor-spl = "^0.22"
locked-voter = { version = "^0.5", features = ["cpi"] }
quarry-operator = { version = "^3.0", features = ["cpi"] }
quarry-mine = { version = "^4.1", features = ["cpi"] }
num-traits = "0.2"
u128 = "0.1"
vipers = "^2.0"
